Commented out old code

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,3 +1,4 @@
+<!-- Old Code from midterm project
 <h1>Add a song review!</h1>
 <article>
   <form method="POST" action="/create">
@@ -26,3 +27,4 @@
     <button type="submit">Submit & Add Review</button>
   </form>
 </article>
+-->
