--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,22 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="/public/css/main.css">
-  <title>Song Review</title>
+  <title>Final Project</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 </head>
 <div class="nav">
   <div>
     <a href="/">Home</a>
-    <a href="/great">Great Songs</a>
-    <a href="/best">The Best Song</a>
-    <a href="/random">Find a Random Song</a>
-    <a href="/worst">The Worst Song</a>
-    <a href="/rating">Sorted List</a>
+    <a href="#">Page One</a>
+    <a href="#">Page Two</a>
+    <a href="#">Page Three</a>
+    <a href="#">Page Four</a>
+    <a href="#">Page Five</a>
   </div>
 </div>
 
 <body>
-  <a href="/create">Add a song review now!</a> {{{body}}}
+  {{{body}}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
   <script>
 
