--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,30 +1,12 @@
-<!-- Old Code from midterm project
-<h1>Add a song review!</h1>
+<h1>Add something</h1>
 <article>
-  <form method="POST" action="/create">
+  <form method="POST" action="/test/create">
     <table>
       <tr>
-        <td><label>Song Name:</label></td>
-        <td><input type="text" name="name" size="50" placeholder="Song Name..."></td>
-      </tr>
-      <tr>
-        <td><label>Song Year:</label></td>
-        <td><input type="text" name="year" size="50" placeholder="Song Year..."></td>
-      </tr>
-      <tr>
-        <td><label>Artists:</label></td>
-        <td><input type="text" name="artists" size="50" placeholder="Artists (seperated by commas)"></td>
-      </tr>
-      <tr>
-        <td><label>Song Genre:</label></td>
-        <td><input type="text" name="genre" size="50" placeholder="Song Genre..."></td>
-      </tr>
-      <tr>
-        <td><label>Rating out of 10:</label></td>
-        <td><input type="text" name="rating" size="50" placeholder="Your Rating..."></td>
+        <td><label>Text:</label></td>
+        <td><input type="text" name="text" size="50" placeholder="Type something..."></td>
       </tr>
   </table>
-    <button type="submit">Submit & Add Review</button>
+    <button type="submit">Submit</button>
   </form>
 </article>
--->
