--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,8 @@
 <article>
 <!--<h1 class="name">{{this.name}}</h1><h2>by</h2><h1 class="artists">{{this.artists}}</h1>
 <p><span class="genre">Genre: {{this.genre}}</span> <span class="rating">Rating: {{this.rating}}</span></p>-->
-<p>We got data, but this isnt implemented yet!</p>
+<p>{{this.text}}</p>
+<p class=>posted at {{this.time}} utc time</p>
 </article>
 {{else}}
 <article>
@@ -19,6 +20,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js">
 </script>
+
 <script>
 /*$("#search").on("keyup", function(){
 
