--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,23 +7,27 @@
   <title>Final Project</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 </head>
-<div class="nav">
-  <div>
-    <a href="/">Home</a>
-    <a href="#">Page One</a>
-    <a href="#">Page Two</a>
-    <a href="#">Page Three</a>
-    <a href="#">Page Four</a>
-    <a href="#">Page Five</a>
-  </div>
-</div>
+
 
 <body>
+<ul id="nav">
+    <li><a href="/">Home</a></li>
+    <li><a href="#">Page One</a></li>
+    <li><a href="#">Page Two</a></li>
+    <li><a href="#">Page Three</a></li>
+    <li><a href="#">Page Four</a></li>
+    <li><a href="#">Page Five</a></li>
+</ul>
+<div id="page">
   {{{body}}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
   <script>
 
   </script>
+  <div id="footer">
+    <p>created by Kemi Lin, Xiaoyu Li, and Matthew McGowan &mdash; 2019
+  </div>
+</div>
 </body>
 
 </html>
