--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,60 @@
-/* Please add your own! */
+/* Background pattern from Toptal Subtle Patterns */
 html {
+
+}
+body {
+  margin: 0;
+  padding: 0;
+  background: url(https://raw.githubusercontent.com/MisterMista/MisterMista.github.io/master/background.png) repeat 0 0;
+  line-height: 1.6;
+  font-size: 16px;
   font-family: Helvetica, sans-serif;
+  color: #454545;
+}
+#page {
+    margin: 16px 32px;
 }
 article {
-  padding: 10px;
-  margin: 10px;
-  background-color: #ECC;
+  padding: 8px 20px;
+  margin: 16px 0px;
+  border: 4px solid #f5624d;
+  border-radius: 20px 10px;
+  box-shadow: 4px 4px #666;
+  background-color: #fcfcfc;
+}
+.timestamp {
+  font-size: 12px;
+  color: #444;
+}
+#nav {
+  font-size: 14px;
+  list-style-type: none;
+  margin: 0;
+  margin-bottom: 16px;
+  padding: 0;
+  overflow: auto;
+  background-color: #3f3c3c;
+  border-top: 2px solid #f5624d;
+}
+
+#nav li {
+  float: left;
+}
+
+#nav li a {
+  display: block;
+  color: #f0f0f0;
+  text-align: center;
+  padding: 10px 12px;
+  text-decoration: none;
+}
+
+#nav li a:hover {
+  background-color: #0e0e0e;
+}
+
+#footer {
+  text-align: center;
+  font-size: 12px;
+  position: bottom;
 }
