Changed background image.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background: url(https://raw.githubusercontent.com/MisterMista/MisterMista.github.io/master/background.png) repeat 0 0;
+  background: url(https://www.toptal.com/designers/subtlepatterns/patterns/what-the-hex.png) repeat 0 0;
   line-height: 1.6;
   font-size: 16px;
   font-family: Helvetica, sans-serif;
