Fixed footer text.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
 
   </script>
   <div id="footer">
-    <p>created by Kemi Lin, Xiaoyu Li, and Matthew McGowan &mdash; 2019
+    <p>Created by Kemi Lin, Xiaoyu Li, and Matthew McGowan &mdash; 2019
   </div>
 </div>
 </body>
