--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,18 +12,27 @@ body {
   color: #454545;
 }
 #page {
-    margin: 16px 32px;
+    margin: 16px 64px;
 }
 article {
-  padding: 8px 20px;
+  padding: 8px 32px;
   margin: 16px 0px;
   border: 4px solid #f5624d;
   border-radius: 20px 10px;
   box-shadow: 4px 4px #666;
   background-color: #fcfcfc;
 }
+.post {
+  font-size: 18px;
+  line-height: 1.6;
+}
+article p.tags{
+  font-size: 14px;
+  line-height: 1;
+  margin: 8px 0;
+}
 .timestamp {
-  font-size: 12px;
+  font-size: 14px;
   color: #444;
 }
 #nav {
