--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 <body>
 <ul id="nav">
     <li><a href="/">Home</a></li>
-    <li><a href="#">Page One</a></li>
+    <li><a href="/create">Create a Post</a></li>
     <li><a href="#">Page Two</a></li>
     <li><a href="#">Page Three</a></li>
     <li><a href="#">Page Four</a></li>
