--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
-<input id="search" type="text" placeholder="Search for something!">
-
-
+<div class = "col-sm-5">
+<i class="far fa-search"></i><input class="form-control" id = "search" type="text" placeholder="Search for something!" aria-label="Search">
+</div>
 <div id="search_results"></div>
 
 <div id="all">
