--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,20 +1,24 @@
-<h1>Add something</h1>
+<h1>Add A Post&nbsp;&nbsp;<i class="far fa-edit fa-lg" ></i></h1>
 <article>
-  <form method="POST" action="/create">
-    <table>
-      <tr>
-        <td><label>Text:</label></td>
-        <td><input type="text" name="text" size="50" placeholder="Type something..."></td>
-      </tr>
-      <tr>
-        <td><label>Username: (optional)</label></td>
-        <td><input type="text" name="user" size="50" placeholder="Leave blank for anonymous"></td>
-      </tr>
-      <tr>
-        <td><label>Tags: (optional)</label></td>
-        <td><input type="text" name="tags" size="50" placeholder="seperate tags by comma"></td>
-      </tr>
-  </table>
+  <form method="POST" action="/create" class = "form-horizontal">
+    <div class = "form-group"> 
+      <label class = "control-label" for = "text"> Text: </label>
+      <div class="col-sm-5">
+        <textarea type = "text" name = "text" class = "form-control" size = "50" placeholder="Type something..."></textarea>
+      </div>
+    </div>
+    <div class = "form-group">
+      <label class = "control-label" for = "username">Username: (optional)</label>
+      <div class = "col-sm-5">
+        <input type = text name = "user" size = "50" class = "form-control" placeholder = "Leave blank for anonymous">
+      </div>
+    </div>
+    <div class = "form-group">
+      <label class = "control-label" for = "tags"> Tags: (optional)</label>
+      <div class = "col-sm-5">
+        <input type = "text" name = "tags" class = "form-control" size = "50" placeholder = "Separate tags by comma">
+      </div>
+    </div>
     <button type="submit">Submit</button>
   </form>
 </article>
