--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,20 +3,26 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" type="text/css" href="/public/css/main.css">
   <title>Final Project</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 </head>
 
 
 <body>
 <ul id="nav">
-    <li><a href="/">Home</a></li>
-    <li><a href="/create">Create a Post</a></li>
-    <li><a href="#">Page Two</a></li>
-    <li><a href="#">Page Three</a></li>
-    <li><a href="#">Page Four</a></li>
-    <li><a href="#">Page Five</a></li>
+    <li><a href="/"><i class="fas fa-home"></i>&nbsp;&nbsp;Home</a></li>
+    <li><a href="/create"><i class="fas fa-pen"></i>&nbsp;&nbsp;Create a Post</a></li>
+    <li><a href="/random">Random Post!</a></li>
+    <li><a href="/most">Most Popular Post</a></li>
+    <li><a href="/least">Least Popular Post</a></li>
+    <li><a href="#"><i class="fas fa-users"></i>&nbsp;&nbsp;About Us</a></li>
 </ul>
 <div id="page">
   {{{body}}}
