--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,6 +1,6 @@
 <h1>Add A Post&nbsp;&nbsp;<i class="far fa-edit fa-lg" ></i></h1>
 <article>
-  <form method="POST" action="/create" class = "form-horizontal">
+  <form id = "posts" method="POST" action="/create" class = "form-horizontal">
     <div class = "form-group"> 
       <label class = "control-label" for = "text"> Text: </label>
       <div class="col-sm-5">
@@ -10,7 +10,7 @@
     <div class = "form-group">
       <label class = "control-label" for = "username">Username: (optional)</label>
       <div class = "col-sm-5">
-        <input type = text name = "user" size = "50" class = "form-control" placeholder = "Leave blank for anonymous">
+        <input  type = text name = "user" size = "50" class = "form-control" placeholder = "Leave blank for anonymous">
       </div>
     </div>
     <div class = "form-group">
