--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,6 +3,13 @@
 </div>
 <div id="search_results"></div>
 
+<p >Live Updates: (send your comments and interact with other users)</p>
+<ul id="messages"></ul>
+<form id="box" action="">
+	<input id="m" autocomplete="off" /><button>Send</button>
+</form>
+
+
 <div id="all">
 {{#each data}}
 <article>
